【新增】藍新金流測試付款流程
